	- Removed Stage6: Website closed
	- Removed Lulu.tv: Website closed (now is lulu.com and its a shopping site)
	- Removed ZanyVideos: Videos are not publics
	- Removed Zaable: Now is a strange website (videos seems to be privates)
	- Removed Broadcaster: Website closed
	- Removed GodTube: Website changed to Tangle
	- Removed ZippyVideos: Website seems to be down

Linux:
------

- Configuration file for linux os is now : ~/.xVideoServiceThief (thanks to AzalSup)
- Default download directory for linux os is now ~/xVideoServiceThief_downloads (thanks to AzalSup)

Windows:
--------

- Compiled with last VC++ version (VC++ 2008 express edition)

Windows Vista:
--------------

- Added detection of Windows Vista for advertise about "administrator permission"
- Added administrator permission before execute xUpdater

MacOS X:
--------

- Added ffmpeg internal detection
- Resized all windows for better user experience
- Configuration file for MacOS X is now: /Users/{User}/Preferences
- All configuration files are now PLIST's


1.8.2a:
-------

- Added French language file

- Added 3 new services:
    - GodTube
    - MyVideo
    - ClipFish

- Revised 1 service:
    - MySpaceTV (added service icon)

1.8.1a:
-------

- Added 2 new services:
    - MySpass
    - Mp3Tube

- Revised 2 services:
    - Dailymotion (added "need login" detection)
    - 123Video

- The last window size and state is now saved

- Fixed bug (Error: Wrong HTTP request were send (wrong host and path))
- Fixed bug (Error: The session was not saved correctly)

- Improved internal "VideoItem" class

Windows:
--------

- Upgraded ffmpeg application to revision 11870


1.8a:
-----

- Added Multiple simultaneous downloads
- Added possibility to Pause and Resume downloads
- Added "Stay always on top" option (accessible from trayIcon->Options->Stay always on top)
- Added "Minimize to System tray" option (accessible from trayIcon->Options->Minimize to System tray)