@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <PathDelim Value="/"/>
-    <Version Value="6"/>
+    <Version Value="7"/>
     <General>
       <Flags>
         <MainUnitHasCreateFormStatements Value="False"/>
         <MainUnitHasTitleStatement Value="False"/>
+        <LRSInOutputDirectory Value="False"/>
       </Flags>
       <MainUnit Value="0"/>
       <TargetFileExt Value=".exe"/>
@@ -28,6 +28,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
+        <CommandLineParams Value="/Users/xEsk/Documents/programacio/Qt4/xVST/bin/tools/script.txt"/>
         <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
@@ -36,25 +37,25 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="9">
       <Unit0>
         <Filename Value="xUpdater.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="xUpdater"/>
-        <CursorPos X="26" Y="21"/>
-        <TopLine Value="1"/>
+        <CursorPos X="65" Y="17"/>
+        <TopLine Value="4"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="20"/>
+        <UsageCount Value="29"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="../src/xUpdaterClass.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="xUpdaterClass"/>
-        <CursorPos X="70" Y="90"/>
-        <TopLine Value="407"/>
+        <CursorPos X="79" Y="166"/>
+        <TopLine Value="166"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="20"/>
+        <UsageCount Value="29"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
@@ -62,47 +63,204 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="ToolsUnit"/>
         <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="2"/>
-        <UsageCount Value="20"/>
+        <TopLine Value="28"/>
+        <EditorIndex Value="5"/>
+        <UsageCount Value="29"/>
         <Loaded Value="True"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="../../../../../../../../../usr/local/share/fpcsrc/rtl/objpas/classes/classesh.inc"/>
+        <CursorPos X="5" Y="1288"/>
+        <TopLine Value="1287"/>
+        <UsageCount Value="9"/>
+      </Unit3>
+      <Unit4>
+        <Filename Value="../../../../../../../../../usr/local/share/fpcsrc/packages/fcl-process/src/process.pp"/>
+        <UnitName Value="process"/>
+        <CursorPos X="20" Y="97"/>
+        <TopLine Value="92"/>
+        <EditorIndex Value="2"/>
+        <UsageCount Value="13"/>
+        <Loaded Value="True"/>
+      </Unit4>
+      <Unit5>
+        <Filename Value="../../../../../../../../../usr/local/share/fpcsrc/rtl/objpas/sysutils/osutilsh.inc"/>
+        <CursorPos X="10" Y="28"/>
+        <TopLine Value="14"/>
+        <EditorIndex Value="4"/>
+        <UsageCount Value="13"/>
+        <Loaded Value="True"/>
+      </Unit5>
+      <Unit6>
+        <Filename Value="../../../../../../../../../usr/local/share/fpcsrc/rtl/unix/sysutils.pp"/>
+        <UnitName Value="sysutils"/>
+        <CursorPos X="11" Y="939"/>
+        <TopLine Value="928"/>
+        <UsageCount Value="9"/>
+      </Unit6>
+      <Unit7>
+        <Filename Value="../../../../../../../../../usr/local/share/fpcsrc/rtl/unix/unix.pp"/>
+        <UnitName Value="Unix"/>
+        <CursorPos X="3" Y="300"/>
+        <TopLine Value="297"/>
+        <UsageCount Value="9"/>
+      </Unit7>
+      <Unit8>
+        <Filename Value="../../../../../../../../../usr/local/share/fpcsrc/packages/fcl-process/src/unix/process.inc"/>
+        <CursorPos X="3" Y="255"/>
+        <TopLine Value="243"/>
+        <EditorIndex Value="3"/>
+        <UsageCount Value="13"/>
+        <Loaded Value="True"/>
+      </Unit8>
     </Units>
-    <JumpHistory Count="5" HistoryIndex="4">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
-        <Filename Value="xUpdater.lpr"/>
-        <Caret Line="1" Column="17" TopLine="1"/>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="446" Column="1" TopLine="432"/>
       </Position1>
       <Position2>
-        <Filename Value="xUpdater.lpr"/>
-        <Caret Line="6" Column="1" TopLine="1"/>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="448" Column="1" TopLine="434"/>
       </Position2>
       <Position3>
-        <Filename Value="xUpdater.lpr"/>
-        <Caret Line="17" Column="11" TopLine="1"/>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="454" Column="1" TopLine="440"/>
       </Position3>
       <Position4>
         <Filename Value="../src/xUpdaterClass.pas"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Caret Line="455" Column="1" TopLine="441"/>
       </Position4>
       <Position5>
-        <Filename Value="xUpdater.lpr"/>
-        <Caret Line="21" Column="26" TopLine="1"/>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="454" Column="1" TopLine="440"/>
       </Position5>
+      <Position6>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="455" Column="1" TopLine="441"/>
+      </Position6>
+      <Position7>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="161" Column="24" TopLine="151"/>
+      </Position7>
+      <Position8>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="79" Column="22" TopLine="67"/>
+      </Position8>
+      <Position9>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="209" Column="1" TopLine="194"/>
+      </Position9>
+      <Position10>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="209" Column="1" TopLine="195"/>
+      </Position10>
+      <Position11>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="210" Column="1" TopLine="196"/>
+      </Position11>
+      <Position12>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="208" Column="33" TopLine="202"/>
+      </Position12>
+      <Position13>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="220" Column="1" TopLine="209"/>
+      </Position13>
+      <Position14>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="171" Column="8" TopLine="158"/>
+      </Position14>
+      <Position15>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="220" Column="1" TopLine="206"/>
+      </Position15>
+      <Position16>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="224" Column="1" TopLine="210"/>
+      </Position16>
+      <Position17>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="225" Column="1" TopLine="211"/>
+      </Position17>
+      <Position18>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="226" Column="1" TopLine="212"/>
+      </Position18>
+      <Position19>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="170" Column="1" TopLine="156"/>
+      </Position19>
+      <Position20>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="171" Column="1" TopLine="157"/>
+      </Position20>
+      <Position21>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="172" Column="1" TopLine="158"/>
+      </Position21>
+      <Position22>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="173" Column="1" TopLine="159"/>
+      </Position22>
+      <Position23>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="178" Column="1" TopLine="164"/>
+      </Position23>
+      <Position24>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="227" Column="1" TopLine="213"/>
+      </Position24>
+      <Position25>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="228" Column="1" TopLine="214"/>
+      </Position25>
+      <Position26>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="173" Column="1" TopLine="159"/>
+      </Position26>
+      <Position27>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="178" Column="1" TopLine="164"/>
+      </Position27>
+      <Position28>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="227" Column="1" TopLine="213"/>
+      </Position28>
+      <Position29>
+        <Filename Value="../src/xUpdaterClass.pas"/>
+        <Caret Line="228" Column="1" TopLine="214"/>
+      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="8"/>
+    <Parsing>
+      <SyntaxOptions>
+        <CStyleOperator Value="False"/>
+      </SyntaxOptions>
+    </Parsing>
     <CodeGeneration>
       <Optimizations>
         <OptimizationLevel Value="3"/>
       </Optimizations>
     </CodeGeneration>
+    <Linking>
+      <Debugging>
+        <GenerateDebugInfo Value="True"/>
+      </Debugging>
+    </Linking>
     <Other>
       <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
   <Debugging>
+    <BreakPoints Count="1">
+      <Item1>
+        <Source Value="../src/xUpdaterClass.pas"/>
+        <Line Value="184"/>
+      </Item1>
+    </BreakPoints>
     <Exceptions Count="2">
       <Item1>
         <Name Value="ECodetoolError"/>
