@@ -50,6 +50,12 @@
 	- Removed GodTube: Website changed to Tangle
 	- Removed ZippyVideos: Website seems to be down
 
+xUpdater:
+
+- Added new function: echo "msg"
+- Added possibility to use " inside the ".."  (i.e: "bla bla \"quoted\" bla bla")
+- Added new optional parameter to "exec" function "wait"  (i.e: exec "app" wait)
+
 Linux:
 ------
 
